Links implementation.
