# server/services/migrator.js
@@ -3,7 +3,8 @@ var async = require('async'),
     _ = require('underscore');
 
 var migrations = [
-    'reformatAssignments'
+    'reformatAssignments',
+    'reformatLinks'
 ];
 
 var migrationImplementations = {
@@ -21,6 +22,43 @@ var migrationImplementations = {
                     if(_.isArray(doc.value.members)){
                         _.each(doc.value.members, function(member){
                             member.form = 'ProjectAssignments';
+                            member.project = project;
+                            toInsert.push(member);
+                        });
+                        toDelete.push({
+                            _id: doc.value._id,
+                            _rev: doc.value._rev,
+                            _deleted: true
+                        });
+                    }
+                }else{
+                    logger.debug('this doc didn\'t have a project.resource?!', doc);
+                    callback('This doc didn\'t have a project resource.');
+                    return true;
+                }
+            });
+            if(!found){
+                db.bulk({docs: _.union(toInsert, toDelete)}, function(err, results){
+                    return callback(err);
+                });
+            }
+        });
+    },
+    reformatLinks: function(dbAccess, logger, callback){
+        var db = dbAccess.db;
+        db.view('views', 'Links', function(err, allDocs){
+            if(err){
+                return callback(err);
+            }
+            var toInsert = [];
+            var toDelete = [];
+            var found = _.find(allDocs.rows, function(doc){
+                if(doc.value && doc.value.project && doc.value.project.resource){
+                    var project = doc.value.project;
+                    if(_.isArray(doc.value.members)){
+                        _.each(doc.value.members, function(member, idx){
+                            member.form = 'ProjectLinks';
+                            member.index = idx;
                             member.project = project;
                             toInsert.push(member);
                         });
